Updated May 11 notes

--- a/201505, May/May11.tex
+++ b/201505, May/May11.tex
@@ -1,5 +1,7 @@
 \documentclass[12 pt]{article}
 
+\usepackage{hyperref}
+
 \title{Week of May 11}
 
 \author{Jeremy Rogers \\
@@ -29,7 +31,7 @@
 	
 	\subsection{Get access to the repository and Gauley}
 		 \begin{enumerate}
-		 	\item With Dr. Gilchrist, I was able to get access to both repositories (the one with Logan's notes and the one containing CUBfits). I also was granted an account on Gauley.
+		 	\item With Dr. Gilchrist, I was able to get access to both repositories (the one with Logan's notes and the one containing CUBfits). I also was granted an account on Gauley and Newton.
 		 \end{enumerate}
 	\subsection{Read through all of Logan's previous notes} 
 		\begin{enumerate}
@@ -49,11 +51,19 @@
 				\item NSE ??
 				\item ORFs -- Open Reading Frames
 				\item $ q $ -- proportional decline in fitness per ATP wasted per unit time
-				\item $ \delta M $ -- mutation bias
+				\item $ \Delta M $ -- mutation bias
 				\item $ E(\phi) $ -- expected protein synthesis rate, should be 1 if time units are defined correctly
 				
 			\end{enumerate} 
 		\end{enumerate}
 		
+		\subsection{Read the R Manual}
+		\begin{enumerate}
+			\item Read the first 3 chapters
+		\end{enumerate}
+		
 		\subsection{Create a repository for these notes}
+			\begin{enumerate}
+				\item Repository has been created at \url{https://github.com/jeremyrogers/EEB}
+			\end{enumerate}
 \end{document}
