--- a/201505, May/May11.tex
+++ b/201505, May/May11.tex
@@ -20,6 +20,7 @@
 		\item Brush up on R by looking through the user manual
 		\item Begin looking through the code on the repository
 		\item Create a repository for these notes
+		\item Get a Linux install working on my box
 	\end{enumerate}
 	
 	\section{Progress/Notes}
@@ -37,8 +38,8 @@
 		\begin{enumerate}
 			\item I should check out his script repository later, when I need to begin testing this. He says it's located at https://github.com/ozway/cubmisc
 			\item After reading through all the notes, it appears that his code is close to completion. There are a few things that he mentioned wanting to do, and I'm not sure if he got around to those.
-			\item He mentions moving the code to C from R, but he feels that it would be more work than it is worth.
-			\item He also mentions debugging his genome creation process by using a genome that is totally dominated by mutation bias, and see if the genome is correctly created across all phi values.
+			\item He mentions moving some of the code to C from R, but he feels that it would be more work than it is worth.
+			\item He also mentions debugging the genome creation process by using a genome that is totally dominated by mutation bias, and see if the genome is correctly created across all phi values.
 			\item He also mentions changing some divisions to subtractions using logarithm rules, since that would be quicker.
 			
 			\item Just some terminology that I need to remember:
