end of day May 11 update

--- a/201505, May/May11.tex
+++ b/201505, May/May11.tex
@@ -22,6 +22,7 @@
 		\item Create a repository for these notes
 		\item Get a Linux install working on my machine
 		\item Read up on MCMC
+		\item Begin running Logan's old code
 	\end{enumerate}
 	
 	\section{Progress/Notes}
@@ -45,7 +46,7 @@
 			
 			\item Just some terminology that I need to remember:
 			\begin{enumerate}
-				\item CBU -- codon usage bias
+				\item CUB -- codon usage bias
 				\item $ \eta $ -- cost-benefit ratio of protein synthesis
 				\item $ \phi $ -- protein synthesis rate
 				\item $ N_e $ -- population size
@@ -84,5 +85,10 @@
 			\begin{enumerate}
 				\item Thanks to Stack Exchange's math section, I found a really nice explanation on MCMC found here: \url{http://stats.stackexchange.com/questions/165/how-would-you-explain-markov-chain-monte-carlo-mcmc-to-a-layperson}.
 				\item Once I got the basics down from that link, I was able to parse through the rather technical Wikipedia page on the subject, and now I feel like I have a good grasp on this.
+			\end{enumerate}
+		
+		\subsection{Run Logan's code}
+			\begin{enumerate}
+				\item Logan's code from his \texttt{cubmisc} repository was pretty broken on my machine, but that could have just been my configuration. After fixing the initial errors I received, I began running his \texttt{run\_roc.r} test script at 15:35 on Wednesday.
 			\end{enumerate}
 \end{document}
