--- a/201505, May/May11.tex
+++ b/201505, May/May11.tex
@@ -2,7 +2,7 @@
 
 \usepackage{hyperref}
 \usepackage{pdfpages}
-\title{Week of May 11}
+\title{May 2015 Work Log}
 
 \author{Jeremy Rogers \\
 	\texttt{jroger44@vols.utk.edu}}
